--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             android:name=".view.activities.ProfileActivity"
             android:configChanges="orientation"
             android:exported="false"
+            android:label="User profile"
             android:theme="@style/Theme.ApexTracker.NoActionBar" />
         <activity
             android:name=".view.activities.SplashActivity"
