--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ android {
 def room_version = '2.3.0'
 def retrofit2_version = '2.9.0'
 def work_manager_version = '2.7.1'
+def exoplayer_version = '2.16.1'
 
 dependencies {
 
@@ -73,6 +74,8 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
 
     implementation "androidx.work:work-runtime-ktx:$work_manager_version"
+
+    implementation "com.google.android.exoplayer:exoplayer:$exoplayer_version"
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
