--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
         targetSdk 30
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -46,6 +47,8 @@ def room_version = '2.3.0'
 def retrofit2_version = '2.9.0'
 def work_manager_version = '2.7.1'
 def exoplayer_version = '2.16.1'
+def youtubeExtractor_version = '2.1.0'
+def multidex_version = "2.0.1"
 
 dependencies {
 
@@ -76,6 +79,9 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:$work_manager_version"
 
     implementation "com.google.android.exoplayer:exoplayer:$exoplayer_version"
+    implementation "com.github.HaarigerHarald:android-youtubeExtractor:$youtubeExtractor_version"
+
+    implementation "androidx.multidex:multidex:$multidex_version"
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
