--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,14 +78,13 @@ dependencies {
 
     implementation "androidx.work:work-runtime-ktx:$work_manager_version"
 
-    implementation "com.google.android.exoplayer:exoplayer:$exoplayer_version"
-    implementation "com.github.HaarigerHarald:android-youtubeExtractor:$youtubeExtractor_version"
 
     implementation "androidx.multidex:multidex:$multidex_version"
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:11.0.1'
 
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
 }
