--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ android {
     }
 }
 
-def room_version = '2.3.0'
+def room_version = '2.4.0'
 def retrofit2_version = '2.9.0'
 def work_manager_version = '2.7.1'
 def exoplayer_version = '2.16.1'
@@ -75,6 +75,7 @@ dependencies {
 
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
+   // implementation 'androidx.room:room-rxjava3:2.4.0'
 
     implementation "androidx.work:work-runtime-ktx:$work_manager_version"
 
